--- a/index.html
+++ b/index.html
@@ -2,33 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="stylesheets" href="style.css">
-  
-  <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title>Social links profile</title>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <section class="social-links-container">
+    <img class="avatar" src="images/rai.png" alt="A picture of Rainiero Herrada using his laptop">
+    <h1>Rainiero Herrada</h1>
+    <p class="location">Valencia, Spain</p>
+    <p class="description">"Marketing Specialist & Future Front-end Developer"</p>
+    <a href="https://github.com/raiherrada" class="button" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/rainieroherrada/" class="button" target="_blank">LinkedIn</a>
+    <a href="https://instagram.com/rainieroherrada" class="button" target="_blank">Instagram</a>
+    <a href="https://www.behance.net/rainiero" class="button" target="_blank">Behance</a>
+    <a href="mailto:rainieroherrada@gmail.com" class="button" target="_blank">Email me</a>
+  </section>
 </body>
 </html>
