Updates to the HTML and CSS files
HTML: I reordered the buttons in terms of semantics by adding them to an unordered list <ul>.

Regarding the CSS file, I had to adjust the button class so it affects the <li> elements by adding .a.button. Also, there where modifications to the margins and the addition to a list-container class to delete the bullet points of the unoredered list.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <h1>Rainiero Herrada</h1>
     <p class="location">Valencia, Spain</p>
     <p class="description">"Marketing Specialist & Future Front-end Developer"</p>
-    <a href="https://github.com/raiherrada" class="button" target="_blank">GitHub</a>
-    <a href="https://www.linkedin.com/in/rainieroherrada/" class="button" target="_blank">LinkedIn</a>
-    <a href="https://instagram.com/rainieroherrada" class="button" target="_blank">Instagram</a>
-    <a href="https://www.behance.net/rainiero" class="button" target="_blank">Behance</a>
-    <a href="mailto:rainieroherrada@gmail.com" class="button" target="_blank">Email me</a>
+    <ul class="list-container">
+      <li><a href="https://github.com/raiherrada" class="button" target="_blank">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/rainieroherrada/" class="button" target="_blank">LinkedIn</a></li>
+      <li><a href="https://instagram.com/rainieroherrada" class="button" target="_blank">Instagram</a></li>
+      <li><a href="https://www.behance.net/rainiero" class="button" target="_blank">Behance</a></li>
+      <li><a href="mailto:rainieroherrada@gmail.com" class="button" target="_blank">Email me</a></li>
+    </ul>
   </section>
 </body>
 </html>
